tests/NormalTests/paczka1/small_fuzzy/87879814.err
Error in line 1: aEtoP24NKTk A241 18,8
Error in line 7: 4PLrb A241 12,3
Error in line 11: 4PLrb A947 64,0
Error in line 13: 4PLrb A241 76,3
